--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
           </a>
         </li>
         <li>
-          <a href="http://www.github.com/{{ site.github }}">
+          <a href="http://www.github.com/{{ site.github.username }}">
             <i class="fa fa-github"></i>
           </a>
         </li>
