--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -57,3 +57,14 @@
         font-size: 2em;
     }
 }
+
+// sections
+
+.site-section {
+    @extend %clearfix;
+    padding-top: $h1-font-size;
+}
+
+.site-section-last {
+    padding-bottom: $h1-font-size;
+}
