--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -21,3 +21,19 @@
 	float: none;
 	margin: 0 auto;
 }
+
+.post-tags {
+	min-height: 50px;
+	text-align: center;
+	margin-left: 0;
+
+	li {
+		display: inline;
+		list-style: none;
+		font-size: 1.5em;
+		margin-left: 5px;
+		background-color: $yellow-color;
+		border-radius: 50%;
+		padding: 10px;
+	}
+}
