--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -37,3 +37,30 @@
 		padding: 10px;
 	}
 }
+
+// Single project page
+
+.post-header {
+	text-align: center;
+}
+
+.post-title {
+	margin: 0;
+}
+
+.post-meta {
+	color: $blue-color;
+	font-size: $h4-font-size;
+}
+
+.post-body {
+	width: 90%;
+	max-width: 40em;
+	margin: $h2-font-size auto;
+
+	h1, h2, h3, h4 {
+		max-width: 80%;
+		margin: $h2-font-size auto;
+	}
+}
+
