--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -25,7 +25,7 @@
 .site-header {
     padding: 2em 0 0;
     border-bottom: 1px solid #ccc;
-    background: url('/images/site-header.png');
+    background: url('../images/site-header.png');
     background-size: cover;
     background-position: center center;
 }
