updated google+ to linked in

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,8 +21,8 @@
           </a>
         </li>
         <li>
-          <a href="http://plus.google.com{{ site.google_username }}">
-            <i class="fa fa-google-plus"></i>
+          <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}">
+            <i class="fa fa-linkedin"></i>
           </a>
         </li>
       </ul>
