--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
       <ul>
         <li>
           <a href="http://www.twitter.com/{{ site.twitter_username }}">
-            <i class="fa fa-twitter"></i>
+            <i class="fa fa-skype"></i>
           </a>
         </li>
         <li>
