base url to project.url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
     <div class="footer-social">
       <ul>
         <li>
-          <a href="http://www.twitter.com/{{ site.twitter_username }}">
+          <a href="#{{ site.skype_username }}">
             <i class="fa fa-skype"></i>
           </a>
         </li>
