--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,7 +1,7 @@
 <li class="project">
 	<a href="{{ site.baseurl }}{{ project.url }}">
 		<figure>
-			<img src="{{ project.featured_image}}" alt="Thumbmail for {{ project.title }}">
+			<img src="{{ site.baseurl }}{{ project.featured_image}}" alt="Thumbmail for {{ project.title }}">
 			<figcaption class="project-caption">
 				{{ project.title }}
 			</figcaption>
