Oh my god I think I've figured it out, it was in layours, post.html last baseurl

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 		</p>
 		{% if page.featured_image %}
 			<div class="post-image">
-				<img src=" {{ page.featured_image}} " alt="{{ page.featured_image}} featured image">
+				<img src=" {{ site.baseurl }}{{ page.featured_image}} " alt="{{ page.featured_image}} featured image">
 			</div>
 		{% endif %}
 	</header>
