--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,9 @@
 <header class="site-header gradient-bar">
 
 <h1 class="site-title mega">
-  <a href="{{ site.baseurl }}">Portfolio</a>
+  <a href="{{ site.baseurl }}">Yon Brooks</a>
 </h1>
+
+<h3>Portfolio</h3>
 
 </header>
