--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -28,6 +28,7 @@
     background: url('../images/site-header.png');
     background-size: cover;
     background-position: center center;
+    height: 40vh;
 }
 
 // Footer
