--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -29,6 +29,10 @@
     background-size: cover;
     background-position: center center;
     height: 40vh;
+
+    h3{
+        color: #fff;
+    }
 }
 
 // Footer
