--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -1,3 +1,10 @@
+//about span style
+body > div > div > article > div > p:nth-child(1) > span{
+	font-size: 50px;
+    font-family: sans-serif;
+    text-decoration: underline;
+}
+
 .post-list {
 	@extend %clearfix;
 	list-style: none;
