added title text animation markup and scss

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,4 +16,12 @@
 
 <h3>Portfolio</h3>
 
+<section class="container">
+  <h1>
+    <span class="title">Yon Brooks</span>
+    <span class="title">Design / Developer</span>
+    <span class="title">Portfolio</span>
+  </h1>
+</section>
+
 </header>
