--- a/css/main.scss
+++ b/css/main.scss
@@ -64,5 +64,6 @@ $on-laptop:        800px;
         "gradient-bar",
         "components/post",
         "components/project",
-        "components/ability"
+        "components/ability",
+        "components/text-animation"
 ;
