--- a/_sass/components/_text-animation.scss
+++ b/_sass/components/_text-animation.scss
@@ -1,6 +1,3 @@
-$red: #e55643 ;
-$green: #2b9f5e;
-$yellow: #f1c83c;
 $shadow: #533d4a;
 
 .container {
@@ -26,6 +23,7 @@ h1 {
   float: left;
   left: 50%;
   position: relative;
+  color: #fff;
   
   span {
     display: block;
@@ -34,17 +32,5 @@ h1 {
     min-width: 10px;
     min-height: 10px;
     position: relative;
-  }
-}
-
-.title {
-  &:nth-child(1){
-    color: $red;
-  }
-  &:nth-child(2){
-    color: $green;
-  }
-  &:nth-child(3){
-    color: $yellow;
   }
 }
