--- a/_sass/components/_text-animation.scss
+++ b/_sass/components/_text-animation.scss
@@ -1,9 +1,14 @@
+@import url(https://fonts.googleapis.com/css?family=Fjalla+One);
+
 $shadow: #533d4a;
 
 .title {
+  font-family: 'Fjalla One', sans-serif;
+  transform: translateX(-50%) rotate(-10deg);
   color: #fff;
   
   span {
+    transform: skew(-10deg);
     text-shadow: $shadow 1px 1px, $shadow 2px 2px, $shadow 3px 3px, $shadow 4px 4px, $shadow 5px 5px, $shadow 6px 6px;
     min-width: 10px;
     min-height: 10px;
