--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,6 @@
   <a href="{{ site.baseurl }}"><span class ="title">Yon Brooks</span></a>
 </h1>
 
-<h3>Portfolio</h3>
+<h3><span class ="title">Portfolio</span></h3>
 
 </header>
