added vw font-values for headings

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,10 +10,12 @@
 
 <header class="site-header gradient-bar">
 
-<h1 class="site-title mega">
-  <a href="{{ site.baseurl }}"><span class ="title">Yon Brooks</span></a>
-</h1>
+<div class="container">
+	<h1 class="site-title mega">
+	  <a href="{{ site.baseurl }}"><span class ="title">Yon Brooks</span></a>
+	</h1>
 
-<h3><span class ="title">Portfolio</span></h3>
+	<h3><span class ="title">Portfolio</span></h3>
+</div>
 
 </header>
