--- a/_sass/components/_text-animation.scss
+++ b/_sass/components/_text-animation.scss
@@ -4,6 +4,7 @@ $shadow: #533d4a;
 
 .title {
   font-family: 'Fjalla One', sans-serif;
+  display: block;
   transform: translateX(0%) rotate(-10deg);
   color: #fff;
   
