--- a/css/main.scss
+++ b/css/main.scss
@@ -12,11 +12,11 @@ $base-font-weight: 500;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$mega-font-size: 100px;
-$h1-font-size: 70px;
-$h2-font-size: 40px;
-$h3-font-size: 30px;
-$h4-font-size: 24px;
+$mega-font-size: 10vw;
+$h1-font-size: 8vw;
+$h2-font-size: 6vw;
+$h3-font-size: 4vw;
+$h4-font-size: 3vw;
 
 $spacing-unit:     30px;
 
