--- a/css/main.scss
+++ b/css/main.scss
@@ -12,11 +12,11 @@ $base-font-weight: 500;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$mega-font-size: 8vw;
-$h1-font-size: 6vw;
-$h2-font-size: 5vw;
-$h3-font-size: 3vw;
-$h4-font-size: 2vw;
+$mega-font-size: 100px;
+$h1-font-size: 80px;
+$h2-font-size: 60px;
+$h3-font-size: 40px;
+$h4-font-size: 35px;
 
 $spacing-unit:     30px;
 
