added post-img styles

--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -45,6 +45,11 @@ body > div > div > article > div > p:nth-child(1) > span{
 	}
 }
 
+.post-img {
+    text-align: center;
+    margin-bottom: 60px;
+}
+
 // Single project page
 
 .post-header {
