added post-span class instead of h3s

--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -50,6 +50,10 @@ body > div > div > article > div > p:nth-child(1) > span{
     margin-bottom: 60px;
 }
 
+.post-span {
+	font-size: 1.5em;
+}
+
 // Single project page
 
 .post-header {
