added footer content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
 
   <div class="wrapper">
     <div class="footer-content">
-      <h3>lorem ipsum</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum facere laboriosam dolores, nobis iste repellendus. Ut dicta alias natus vero, neque, nihil consequatur animi inventore molestiae, blanditiis odio facere autem.</p>
+      <h3>I'm a footer!</h3>
+      <p>I am a passionate and enthusiastic Front End Developer with a diverse skill set. I have been working within the eCommerce world for 3 years now and I am currently working as a 'Font-end eCommerce Developer'.</p>
 
       <p>Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
     </div>
