--- a/_sass/components/_project.scss
+++ b/_sass/components/_project.scss
@@ -15,3 +15,9 @@
 	margin-top: 0.5em;
 	font-size: $h3-font-size;
 }
+
+@media screen and (max-width: 790px) {
+    .project {
+        width: 100%;
+    }
+}
